@@ -27,11 +27,11 @@ t42
 * detect missing tables
 * read glyf table in parts, use static buffer for tables
 * put only glyphs into encoding array that are present in font
-! write_sfnts: extra newline when last line is full
 - embed full font (--full)
 
 cid2
 
-* vert and jajn substitiutions
-* omit unencoded glyphs at end of CIDMap
-* cid.c: create array of glyph indices included in struct cid.
+! vert and jajn substitiutions
+! omit unencoded glyphs at end of CIDMap
+! cid.c: create array of glyph indices included in struct cid.
+! CID0: add ncids, substitutions.
